--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -105,9 +105,16 @@
   transition: background-color 0.1s;
 }
 
-.commentForm button[type=submit]:hover {
+.commentForm button[type=submit]:not(:disabled):hover {
   background: var(--orange-300);
 }
+
+.commentForm button[type=submit]:disabled {
+  background: var(--gray-400);
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+
 
 .commentList {
   margin-top: 2rem;
